# SModel

./: .gitignore  CMakeLists.txt  README.md
cmake/: ConfigureGLM.cmake  ConfigureOpenCV.cmake  FindEigen.cmake
cmake/modules/: ConfigureEigen.cmake  ConfigureOpenGL.cmake  ConfigureQt.cmake  FindGLM.cmake
project/apps/: CMakeLists.txt  main.cpp
project/data/body/: blocks.csv  bones.csv  centers.csv  dofs.csv  thetas.csv
project/data/left-hand/: dofs.csv  thetas.csv
project/data/left_hand/: blocks.csv  bones.csv  centers.csv  dofs.csv  thetas.csv
project/data/models/: SLModel
project/data/right-hand/: blocks.csv  bones.csv  centers.csv
project/data/right_hand/: blocks.csv  bones.csv  centers.csv  dofs.csv  thetas.csv
project/data/signs/glosses_map/: glosses_map.csv
project/data/signs/sign_data/: 168  1856  20  32  370  971
project/model/: CMakeLists.txt  Model.cpp  Model.h  ModelConfigLoader.cpp  ModelConfigLoader.h  ModelCtrl.cpp  ModelCtrl.h  ModelSemantics.cpp  ModelSemantics.h  ModelType.h  ModelsManager.cpp  ModelsManager.h  csv.h
project/signer/: CMakeLists.txt  LexicalItem.cpp  LexicalItem.h  SignData.cpp  SignData.h  SignDataLoader.cpp  SignDataLoader.h  Signer.cpp  Signer.h
project/ui/: CMakeLists.txt  Camera.cpp  Camera.h  GLWidget.cpp  GLWidget.h  GLWindow.cpp  GLWindow.h  MainWindow.cpp  MainWindow.h  QUIConst.h  QUIManager.cpp  QUIManager.h
project/ui/OpenGL/: ConvolutionRenderer.cpp  ConvolutionRenderer.h  FixAxisRenderer.cpp  GLRenderer.cpp  GLRenderer.h  GridAxisRenderer.h
project/ui/pannels/: QUIAnim.cpp  QUIAnim.h  QUIConst.h  QUIDashboard.cpp  QUIDashboard.h  QUIPannelCtrl.cpp  QUIPannelCtrl.h  QUIPointCloud.cpp  QUIPointCloud.h  QUIQuick.cpp  QUIQuick.h  QUIRenderImg.cpp  QUIRenderImg.h
project/ui/renderers/: CenterAxisRenderer.cpp  CenterAxisRenderer.h  ConvolutionRenderer.cpp  ConvolutionRenderer.h  ConvolutionRendererFingerMask.cpp  ConvolutionRendererFingerMask.h  ConvolutionRendererMask.cpp  ConvolutionRendererMask.h  FixAxisRenderer.h  GLRenderer.cpp  GLRenderer.h  GridAxisRenderer.cpp  Simple3DRenderer.cpp  Simple3DRenderer.h
project/ui/shaders/: axis_fs.glsl  axis_vs.glsl  gridAxis_fs.glsl  gridAxis_vs.glsl  model_finger_mask_fs.glsl  model_finger_mask_vs.glsl  model_fs.glsl  model_mask_fs.glsl  model_vs.glsl  simple3D_fs.glsl  simple3D_vs.glsl
project/ui/stb_image/: stb_image.h
project/utils/: CMakeLists.txt  SMLog.cpp  SMLog.h  csv.h  csv_convert.h  dir_utils.h
